--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <i class="fa-brands fa-sass"></i>
                     </div>
                     <p>Weather app made with React, in this application you can search for the city you want and see the
-                        weather, the app consumes an API which has weather data from around the world</p>
+                        weather, the app consumes an API which has weather data from around the world.</p>
                     <div class="buttons">
                         <a href="https://weatherapp-two-omega.vercel.app/" target="_blank">VIEW LIVE</a>
                         <a href="https://github.com/FranciscoMeglia/Weather-APP-" target="_blank">VIEW CODE</a>
@@ -151,7 +151,7 @@
                         <i class="fa-brands fa-js"></i>
                     </div>
                     <p>This is a clone of the original page of "Argentina.gob.ar", I used it as an example to
-                        demonstrate my skills when developing from a design</p>
+                        demonstrate my skills when developing from a design.</p>
                     <div class="buttons">
                         <a href="https://proyecto-1-utn.vercel.app/" target="_blank">VIEW LIVE</a>
                         <a href="https://github.com/FranciscoMeglia/Proyecto-1-UTN" target="_blank">VIEW CODE</a>
@@ -169,9 +169,7 @@
                         <i class="fa-brands fa-sass"></i>
                         <i class="fa-brands fa-js"></i>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla eos sunt alias ducimus autem
-                        ipsum nostrum in corporis non, deserunt, omnis iste rerum. Recusandae consectetur hic deserunt
-                        quia. Reiciendis, hic.</p>
+                    <p>Tip calculator with default or custom values, was made with vanilla JavaScript.</p>
                     <div class="buttons">
                         <a href="https://tip-calculator-jet.vercel.app/" target="_blank">VIEW LIVE</a>
                         <a href="https://github.com/FranciscoMeglia/Tip-Calculator" target="_blank">VIEW CODE</a>
