--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <i class="fa-brands fa-css3-alt"></i>
                     </div>
                     <p>This is a Rick and Morty web application, which consumes an API and has different filters to find
-                        specific characters.I carried out this project for the final exam of the first section of the
+                        specific characters. I carried out this project for the final exam of the first section of the
                         diploma in Full Stack Web Programming at the UTN.</p>
                     <div class="buttons">
                         <a href="https://rick-morty-utn.vercel.app/" target="_blank">VIEW LIVE</a>
@@ -151,7 +151,7 @@
                         <i class="fa-brands fa-js"></i>
                     </div>
                     <p>This is a clone of the original page of "Argentina.gob.ar", I used it as an example to
-                        demonstrate my skills when developing from a design.</p>
+                        demonstrate my skills when developing from a design. I carried out this project for the first exam of the first section of the diploma in Full Stack Web Programming at the UTN</p>
                     <div class="buttons">
                         <a href="https://proyecto-1-utn.vercel.app/" target="_blank">VIEW LIVE</a>
                         <a href="https://github.com/FranciscoMeglia/Proyecto-1-UTN" target="_blank">VIEW CODE</a>
