--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <nav class="nav" id="nav">
             <div class="title">
-                <h2>&lt;Francisco Meglia/&gt;</h1>
+                <h2>&lt;Francisco Megli/&gt;</h1>
             </div>
             <div class="links">
                 <ul>
