--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <nav class="nav" id="nav">
             <div class="title">
-                <h2>&lt;Francisco Megli/&gt;</h1>
+                <h2>&lt;Francisco Meglia/&gt;</h1>
             </div>
             <div class="links">
                 <ul>
@@ -108,6 +108,21 @@
             <p>My projects 🚧</p>
         </div>
         <div class="projects-container">
+            <div class="project">
+                <div class="img" style="background-image: url(./Assets/Nike\ foto.png);"></div>
+                <div class="info">
+                    <h3>Nike Ecommerce</h3>
+                    <div class="tecs">
+                        <i class="fa-brands fa-react"></i>
+                        <i class="fa-brands fa-css3-alt"></i>
+                    </div>
+                    <p>I did this project with a colleague from the Diploma in Full Stack Programming at the UTN. It is an ecommerce from the Nike brand which has all the functionalities of a traditional ecommerce (add and remove products from the cart, edit the cart, filters, among others).</p>
+                    <div class="buttons">
+                        <a href="https://nike-remoto.vercel.app/" target="_blank">VIEW LIVE</a>
+                        <a href="https://github.com/FranciscoMeglia/Nike-Remoto" target="_blank">VIEW CODE</a>
+                    </div>
+                </div>
+            </div>
             <div class="project">
                 <div class="info">
                     <h3>Rick Morty UTN</h3>
