Update , add DoctorDashboard UTN project

--- a/index.html
+++ b/index.html
@@ -109,6 +109,23 @@
         </div>
         <div class="projects-container">
             <div class="project">
+                <div class="info">
+                    <h3>DoctorDashboard UTN</h3>
+                    <div class="tecs">
+                        <i class="fa-brands fa-react"></i>
+                        <i class="fa-brands fa-css3-alt"></i>
+                        <i class="fa-brands fa-node-js"></i>
+                        <i class="fa-solid fa-database"></i>
+                    </div>
+                    <p>Simple dashboard in which all CRUD operations can be performed. This was developed as a project for the Diploma in "Full Stack Programmer" at the UTN. It is developed on the Frontend with React JS / CSS and on the Backend with Node JS / MySql.</p>
+                    <div class="buttons">
+                        <a href="https://doctor-dashboard-prueba.vercel.app/Crear-Paciente" target="_blank">VIEW LIVE</a>
+                        <a href="https://github.com/FranciscoMeglia/Doctor-Dashboard" target="_blank">VIEW CODE</a>
+                    </div>
+                </div>
+                <div class="img" style="background-image: url(./Assets/DoctorDashboard\ UTN.png);"></div>
+            </div>
+            <div class="project">
                 <div class="img" style="background-image: url(./Assets/Nike\ foto.png);"></div>
                 <div class="info">
                     <h3>Nike Ecommerce</h3>
@@ -224,7 +241,7 @@
     </section>
     <!-- FOOTER -->
     <footer class="footer">
-        <p>Copyright © 2023. All Rights Reserved</p>
+        <p>Copyright © 2024. All Rights Reserved</p>
     </footer>
     <!-- SCRIPTS     -->
     <script src="https://kit.fontawesome.com/d75ce1767e.js" crossorigin="anonymous"></script>
