--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="education-card">
                     <img src="./Assets/UTN.jpg" class="utn" alt="UTN logo">
                     <p>UTN FRBA "Programador Web Full Stack"</p>
-                    <a href="#">Is In Process....</a>
+                    <a href="./Assets/Full Stack UTN.png" target="_blank">View Certificate</a>
                 </div>
                 <div class="education-card">
                     <img src="./Assets/UTN.jpg" class="utn" alt="UTN logo">
