Big update in all the project

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/6840/6840478.png" type="image/x-icon">
     <link rel="stylesheet" href="./Styles/Styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <meta name="description" content="I am Francisco Meglia , a Frontend Web Developer based in Argentina.">
     <link rel="stylesheet" href="./Animations/animations.css">
+    <meta name="description" content="I am Francisco Meglia , a Frontend Web Developer based in Argentina.">
     <title>Francisco Meglia</title>
 </head>
 <body>
@@ -17,6 +17,12 @@
             <a href="https://wa.me/542342560131?text=Hi%20Francisco%20!%20I%20am%20interested%20in%20your%20profile."><img
                     src="./Assets/whatsapp-logo-free-png.webp" alt="whatsapp logo"></a>
         </div>
+        <div class="whatsapp-message" id="whatsappMessage">
+            <div class="whatsapp-message-1">
+                <p>Hey ! Start a conversation !</p>
+            </div>
+            <div class="whatsapp-message-2"></div>
+        </div>
         <nav class="nav" id="nav">
             <div class="title">
                 <h2>&lt;Francisco Meglia/&gt;</h1>
@@ -24,6 +30,7 @@
             <div class="links">
                 <ul>
                     <li><a href="#about" class="link">About</a></li>
+                    <!-- <li><a href="#services" class="link">Services</a></li> -->
                     <li><a href="#projects" class="link">Projects</a></li>
                     <li><a href="#contact" class="link">Contact</a></li>
                 </ul>
@@ -41,7 +48,7 @@
                 </div>
                 <h1>Francisco Meglia</h1>
                 <p>Frontend DEVELOPER</p>
-                <a href="./Assets/Francisco Meglia CV 2023.pdf" download="Francisco Meglia CV 2023.pdf">DOWNLOAD CV</a>
+                <a href="./Assets/Francisco Meglia CV.pdf" download="Francisco Meglia CV.pdf">DOWNLOAD CV</a>
             </div>
         </div>
     </main>
@@ -58,6 +65,32 @@
                 exciting projects. My goal is to continually expand my skill set and collaborate with like-minded
                 individuals in the field.</p>
         </div>
+        <!-- SERVICE SECTION  (A TERMINAR)-->
+        <!-- <section class="service" id="services">
+            <div class="title">
+                <p>Services 📝</p>
+            </div>
+        <div class="service-card">
+            <div class="service-card-1">
+                <div class="service-card-1-img">
+                    <img src="./Assets/web img.png" alt="web icon" class="web">
+                </div>
+                <p>Ofrezco servicios de diseño de páginas web que combinan funcionalidad y estética para crear sitios impresionantes y fáciles de usar. Me especifico en el desarrollo de experiencias digitales personalizadas que se adaptan a las necesidades únicas de cada cliente.</p>
+            </div>
+            <div class="service-card-1">
+                <div class="service-card-1-img">
+                    <img src="./Assets/iphone img.png" alt="mobile icon" class="mobile">   
+                </div>
+                <p>Mi diseño para dispositivos móviles asegura que tu presencia digital se vea y funcione perfectamente en smartphones y tablets. Creo interfaces responsivas y adaptativas que se ajustan automáticamente a diferentes tamaños de pantalla, brindando una experiencia de</p>
+            </div>
+            <div class="service-card-1">
+                <div class="service-card-1-img">
+                    <img src="./Assets/web img.png" alt="web icon" class="web">
+                </div>
+                <p>Ofrezco servicios de diseño de páginas web que combinan funcionalidad y estética para crear sitios impresionantes y fáciles de usar. Me especifico en el desarrollo de experiencias digitales personalizadas que se adaptan a las necesidades únicas de cada cliente.</p>
+            </div>
+        </div>
+        </section> -->
         <div class="education">
             <div class="title-education">
                 <p>Education 🎓</p>
