--- a/index.html
+++ b/index.html
@@ -65,32 +65,20 @@
                 exciting projects. My goal is to continually expand my skill set and collaborate with like-minded
                 individuals in the field.</p>
         </div>
-        <!-- SERVICE SECTION  (A TERMINAR)-->
-        <!-- <section class="service" id="services">
+        <!-- SERVICE SECTION  (A TERMINAR)
+        <section class="service" id="services">
             <div class="title">
                 <p>Services 📝</p>
             </div>
-        <div class="service-card">
-            <div class="service-card-1">
-                <div class="service-card-1-img">
-                    <img src="./Assets/web img.png" alt="web icon" class="web">
-                </div>
-                <p>Ofrezco servicios de diseño de páginas web que combinan funcionalidad y estética para crear sitios impresionantes y fáciles de usar. Me especifico en el desarrollo de experiencias digitales personalizadas que se adaptan a las necesidades únicas de cada cliente.</p>
+        <div class="service-container">
+            <div class="service-container-cards">
+
             </div>
-            <div class="service-card-1">
-                <div class="service-card-1-img">
-                    <img src="./Assets/iphone img.png" alt="mobile icon" class="mobile">   
-                </div>
-                <p>Mi diseño para dispositivos móviles asegura que tu presencia digital se vea y funcione perfectamente en smartphones y tablets. Creo interfaces responsivas y adaptativas que se ajustan automáticamente a diferentes tamaños de pantalla, brindando una experiencia de</p>
-            </div>
-            <div class="service-card-1">
-                <div class="service-card-1-img">
-                    <img src="./Assets/web img.png" alt="web icon" class="web">
-                </div>
-                <p>Ofrezco servicios de diseño de páginas web que combinan funcionalidad y estética para crear sitios impresionantes y fáciles de usar. Me especifico en el desarrollo de experiencias digitales personalizadas que se adaptan a las necesidades únicas de cada cliente.</p>
-            </div>
+            <div class="service-container-questions">
+
+            </div>  
         </div>
-        </section> -->
+        </section>  -->
         <div class="education">
             <div class="title-education">
                 <p>Education 🎓</p>
@@ -132,6 +120,7 @@
                 <div class="skill"><img src="./Assets/react logo.png" alt="react logo"></div>
                 <div class="skill"><img src="./Assets/git logo.png" alt="git logo"></div>
                 <div class="skill"><img src="./Assets/vs code logo.webp" alt="vs code logo"></div>
+                <div class="skill"><img src="./Assets/figma logo.png" alt="vs code logo"></div>
             </div>
         </div>
     </section>
