--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./Animations/animations.css">
     <meta name="description" content="I am Francisco Meglia , a Frontend Web Developer based in Argentina.">
+    <meta name="keywords" content="web , web application , web developer , developer , argentina , español , english , web design , design , portfolio , frontend">
     <title>Francisco Meglia</title>
 </head>
 <body>
@@ -30,7 +31,6 @@
             <div class="links">
                 <ul>
                     <li><a href="#about" class="link">About</a></li>
-                    <!-- <li><a href="#services" class="link">Services</a></li> -->
                     <li><a href="#projects" class="link">Projects</a></li>
                     <li><a href="#contact" class="link">Contact</a></li>
                 </ul>
@@ -64,21 +64,7 @@
                 command of the English language. I am passionate about web development and eager to contribute to
                 exciting projects. My goal is to continually expand my skill set and collaborate with like-minded
                 individuals in the field.</p>
-        </div>
-        <!-- SERVICE SECTION  (A TERMINAR)
-        <section class="service" id="services">
-            <div class="title">
-                <p>Services 📝</p>
-            </div>
-        <div class="service-container">
-            <div class="service-container-cards">
-
-            </div>
-            <div class="service-container-questions">
-
-            </div>  
-        </div>
-        </section>  -->
+        </div> 
         <div class="education">
             <div class="title-education">
                 <p>Education 🎓</p>
