animation update with AOS librabry

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./Styles/Styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./Animations/animations.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="description" content="I am Francisco Meglia , a Frontend Web Developer based in Argentina.">
     <meta name="keywords" content="web , web application , web developer , developer , argentina , español , english , web design , design , portfolio , frontend">
     <title>Francisco Meglia</title>
@@ -116,7 +117,7 @@
             <p>My projects 🚧</p>
         </div>
         <div class="projects-container">
-            <div class="project">
+            <div class="project" data-aos="fade-right" data-aos-duration="1200">
                 <div class="info">
                     <h3>DoctorDashboard UTN</h3>
                     <div class="tecs">
@@ -133,7 +134,7 @@
                 </div>
                 <div class="img" style="background-image: url(./Assets/DoctorDashboard\ UTN.png);"></div>
             </div>
-            <div class="project">
+            <div class="project" data-aos="fade-left" data-aos-duration="1200">
                 <div class="img" style="background-image: url(./Assets/Nike\ foto.png);"></div>
                 <div class="info">
                     <h3>Nike Ecommerce</h3>
@@ -148,7 +149,7 @@
                     </div>
                 </div>
             </div>
-            <div class="project">
+            <div class="project" data-aos="fade-right" data-aos-duration="1200">
                 <div class="info">
                     <h3>Rick Morty UTN</h3>
                     <div class="tecs">
@@ -165,7 +166,7 @@
                 </div>
                 <div class="img" style="background-image: url(./Assets/Rick\ Mort\ page.png);"></div>
             </div>
-            <div class="project">
+            <div class="project" data-aos="fade-left" data-aos-duration="1200">
                 <div class="img"
                     style="background-image: url(./Assets/react\ weather\ app.png); background-position: center;"></div>
                 <div class="info">
@@ -182,7 +183,7 @@
                     </div>
                 </div>
             </div>
-            <div class="project">
+            <div class="project" data-aos="fade-right" data-aos-duration="1200">
                 <div class="info">
                     <h3>Argentina.gob Clone</h3>
                     <div class="tecs">
@@ -199,7 +200,7 @@
                 </div>
                 <div class="img" style="background-image: url(./Assets/argGob.png);"></div>
             </div>
-            <div class="project">
+            <div class="project" data-aos="fade-left" data-aos-duration="1200">
                 <div class="img"
                     style="background-image: url(./Assets/TipCalculator.png); background-position: center;"></div>
                 <div class="info">
@@ -253,6 +254,7 @@
     </footer>
     <!-- SCRIPTS     -->
     <script src="https://kit.fontawesome.com/d75ce1767e.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
