--- a/index.html
+++ b/index.html
@@ -230,12 +230,12 @@
             <p>Contact me 📧</p>
         </div>
         <div class="form-container">
-            <form action="https://formsubmit.co/megliafrancisco@gmail.com" method="post">
-                <input type="text" placeholder="Name" name="Name" required>
-                <input type="email" placeholder="Email" name="Email" required>
+            <form id="form" action="https://formsubmit.co/megliafrancisco@gmail.com" method="post">
+                <input type="text" placeholder="Name" name="Name" id="Name" required>
+                <input type="email" placeholder="Email" name="Email" id="Email" required>
+                <textarea name="Message" id="Message" cols="30" rows="10" placeholder="Message" required></textarea>
+                <button id="submit" type="submit">SUBMIT</button>
                 <input type="hidden" name="_captcha" value="false">
-                <textarea name="Message" id="" cols="30" rows="10" placeholder="Message" required></textarea>
-                <button type="submit">SUBMIT</button>
             </form>
         </div>
         <div class="socials">
